--- a/atv03-joao-pedro/listaluno.html
+++ b/atv03-joao-pedro/listaluno.html
@@ -16,6 +16,12 @@
     </div>
 </header>
 
+<nav class="main-nav">
+    <a href="index.html">Home</a>
+    <a href="cadaluno.html">Cadastrar Aluno</a>
+    <a href="listaluno.html">Lista de Alunos</a>
+</nav>
+
 <main>
     <h2>Alunos Cadastrados:</h2>
     <table class="student-table">
@@ -28,7 +34,6 @@
             </tr>
         </thead>
         <tbody>
-            <!-- Dados fixos -->
             <tr>
                 <td>Maria Silva</td>
                 <td>maria.silva@example.com</td>
@@ -41,12 +46,6 @@
                 <td>(21) 12345-6789</td>
                 <td>História</td>
             </tr>
-            <tr>
-                <td>Carla Oliveira</td>
-                <td>carla.oliveira@example.com</td>
-                <td>(31) 99876-5432</td>
-                <td>Ciências</td>
-            </tr>
         </tbody>
     </table>
 </main>
@@ -54,7 +53,7 @@
 <footer>
     <div class="footer-content">
         <p>&copy; 2024 João Pedro Bastos - Todos os direitos reservados.</p>
-        <p><a href="#">Política de Privacidade</a> | <a href="#">Termos de Uso</a></p>
+        <img src="imagens/image.png" alt="Logo IF" class="footer-logo">
     </div>
 </footer>
 
