--- a/atv03-joao-pedro/index.html
+++ b/atv03-joao-pedro/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de Alunos</title>
+    <title>Pagina Inicial</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,13 +20,22 @@
     </div>
 </header>
 
+<nav class="main-nav">
+    <a href="index.html">Home</a>
+    <a href="cadaluno.html">Cadastrar Aluno</a>
+    <a href="listaluno.html">Lista de Alunos</a>
+</nav>
+
 <main>
     <section>
-        <h2>Bem-vindo ao Sistema de Cadastro!</h2>
+        <h2>Bem-vindo ao Sistema de Cadastro da Waite School</h2>
         <p>Utilize os botões abaixo para navegar entre as páginas do sistema.</p>
         <div class="buttons">
             <a href="cadaluno.html" class="button">Cadastrar Aluno</a>
             <a href="listaluno.html" class="button">Lista de Alunos</a>
+        </div>
+        <div class="main-image">
+            <img src="imagens/mulher-roxa.png" alt="Mulher Roxa">
         </div>
     </section>
 </main>
@@ -35,12 +44,8 @@
     <div class="footer-content">
         <p>&copy; 2024 João Pedro Bastos - Todos os direitos reservados.</p>
         <p><a href="#">Política de Privacidade</a> | <a href="#">Termos de Uso</a></p>
+        <img src="imagens/image.png" alt="Logo IF" class="footer-logo">
     </div>
-    <nav class="footer-nav">
-        <a href="index.html">Home</a>
-        <a href="cadaluno.html">Cadastro</a>
-        <a href="listaluno.html">Lista</a>
-    </nav>
 </footer>
 
 </body>
